Fix for vertical scrollbar issue

--- a/airtime_mvc/public/css/styles.css
+++ b/airtime_mvc/public/css/styles.css
@@ -143,15 +143,28 @@ select {
 * html .clearfix, * html li { height: 1%;}
 .clearfix, #side_playlist li {    display: block;    }
 
-
 /* Master Panel */
+
+.sticky {
+    position: fixed;
+    width: 100%;
+    left: 0;
+    top: 0;
+    z-index: 2000;
+    border-top: 0;
+}
+
+.push {
+    width: 100%;
+    height: 139px;
+}
+
 #sticky {
     position:fixed;
     height:130px;
     top:0;
     left:0;
 }
-
 
 #master-panel {
     background:#3d3d3d url(images/masterpanel_bg.png) repeat-x 0 0;
@@ -363,6 +376,8 @@ select {
 
 
 .wrapper {
+    position: absolute;
+    top: 139px;
     margin: 0 5px 0 5px;
     padding:10px 0 0 0;
 }
@@ -1110,10 +1125,10 @@ input[type="checkbox"] {
     left:0;
     margin-bottom:140px;
 }*/
-.sticky {
-    padding:0;
-    width:100%;
-}
+/*.sticky {*/
+    /*padding:0;*/
+    /*width:100%;*/
+/*}*/
 
 .floated-panel {
     margin-top:0;
